--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/cursos_server_db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.show-sql=true
+spring.datasource.url=${MYSQL_DB_URL}
+spring.datasource.username=${MYSQL_DB_USER}
+spring.datasource.password=${MYSQL_DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=springapplicationserver@gmail.com
-spring.mail.password=wybc pbxq ibxw sqif
+spring.mail.username=${MAIL.USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+EXPIRATION=600000
+SECRET_KEY=${SECRET_KEY}
