--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,6 @@ spring.mail.username=${MAIL.USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-EXPIRATION=86400000
+
+EXPIRATION=${TOKEN_EXPIRATION_TIME}
 SECRET_KEY=${SECRET_KEY}
