--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 EXPIRATION=${TOKEN_EXPIRATION_TIME}
 SECRET_KEY=${SECRET_KEY}
+ADMIN_KEY=${ADMIN_KEY}
