--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 EXPIRATION=${TOKEN_EXPIRATION_TIME}
 SECRET_KEY=${SECRET_KEY}
 ADMIN_KEY=${ADMIN_KEY}
+MAIL_ADRESS_KEY=${MAIL_ADRESS_KEY}
