--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ EXPIRATION=${TOKEN_EXPIRATION_TIME}
 SECRET_KEY=${SECRET_KEY}
 ADMIN_KEY=${ADMIN_KEY}
 MAIL_ADRESS_KEY=${MAIL_ADRESS_KEY}
+MAIL_COMPANY=${MAIL_USERNAME}
