--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ SECRET_KEY=${SECRET_KEY}
 ADMIN_KEY=${ADMIN_KEY}
 MAIL_ADRESS_KEY=${MAIL_ADRESS_KEY}
 MAIL_COMPANY=${MAIL_COMPANY}
+EMPRESA = ${EMPRESA}
+TELEFONE = ${TELEFONE}
+EMAIL = ${MAIL_COMPANY}
+CNPJ = ${CNPJ}
